feat: Auto library detecting